manager/templates/default/css/index.css
/* ... */
.x-grid3-col-text-col{
	font-size: 11px;
	text-align: center;
}
.x-grid3-col-info-col, .x-grid3-col-meta-col  {    
    font-size: 11px;
    font-weight: bold;
    text-align: center;
}
.x-grid3-col-meta-col{ color: #53595F; }
.x-grid3-col-info-col{ color: #92AF4C; }
.not-installed .x-grid3-col-info-col{ color: #C34550; }

.inline-button{
	margin: 0 auto;
    padding: 8px;
}

/* Inline form (not ext - Used by package maanger => setup-options window)*/

.meta-wrapper{
	padding: 15px;
	overflow: auto;
	max-height: 400px;
	white-space: pre;
	color: #808080;
}

.inline-form{
	border: 0 none;
    padding: 15px 15px 0;
}
.inline-form label{
	color: #777777;
    display: block;
    font-weight: bold;
    margin-bottom: 2px;
}
.inline-form input[type=text], .inline-form textarea{
	 -moz-border-radius:2px;
    -webkit-border-radius:2px;
    -o-border-radius:2px;
    -ms-border-radius:2px;
    -khtml-border-radius:2px;
    border-radius:2px;
    position: relative;
    background-color: #fbfbfb;
    background-image: none;
    border: 1px solid #CCCCCC;
	width: 97%;
}
.inline-form input[type=text]{
	height: 20px !important;
	padding: 5px;
	font-size: 13px;
}

